Cambios en la api y vistas de alumno

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,9 @@
 #logo {
-    max-width: 50px;
+    max-width: 150px;
     height: auto;
 }
 .navbar{
-    background-color: #1A4D8B;
+    background-color: #7CA8D5;
 }
 .nav-item .nav-link{
     color:white
