Panel de admin y separacion de vistas admin y usuario

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,3 +26,10 @@
 #link:hover {
     color: #211261;
 }
+#link_admin{
+    color: black;
+}
+.dropdown-menu a {
+    text-decoration: none;
+    color: inherit;
+}
