--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,4 +9,5 @@
 
 @import '../css/app.css';
 
-//@import 'bootstrap-icons/font/bootstrap-icons';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
