--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,7 +16,7 @@
     color: #211261;
 }
 .card .card-header{
-    background-color:  #2B6BB5;
+    background-color: rgb(60, 180, 229, 1.0);
     color: white
 }
 #card-departamento {
@@ -59,5 +59,22 @@
     color: rgb(60, 180, 229, 0.6);
 }
 .bi {
-    font-size: 18px; /* Puedes ajustar el tamaño según tus necesidades */
+    font-size: 18px; /* Tamaño de los iconos de bootstrap */
   }
+.linkAdmin{
+    color: rgb(60, 180, 229, 1.0);
+}
+.linkAdmin:hover {
+    color: #211261;
+}
+.adminText{
+    color: #211261;
+}
+.page-link.active, .active > .page-link
+{
+    background-color: rgba(60, 180, 229, 1.0) !important;
+}
+.page-link
+{
+    color:#211261 !important;
+}
