--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,83 +1,114 @@
+*{
+    min-height:100%;/* make sure it is at least as tall as the viewport */
+    position:relative;
+}
+body{
+    height:100%; /* force the BODY element to match the height of the HTML element */
+}
 #logo {
     max-width: 125px;
     height: auto;
 }
-.navbar{
+
+.navbar {
     /*background-color: rgb(60, 180, 229, 0.6);*/
     background-color: rgba(0, 138, 171, 0.7)
 }
-.nav-item .nav-link{
-    color:white
+
+.nav-item .nav-link {
+    color: white
 }
-.nav-item .nav-link:hover{
+
+.nav-item .nav-link:hover {
     color: #211261;
 }
-.nav-item .nav-link:active{
+
+.nav-item .nav-link:active {
     color: #211261;
 }
-.card .card-header{
+
+.card .card-header {
     background-color: rgb(60, 180, 229, 1.0);
     color: white
 }
+
 #card-departamento {
     background-color: rgb(60, 180, 229, 0.8);
     color: white;
 }
+
 #card-ciclo {
     background-color: rgba(0, 138, 171, 0.7);
     color: white;
 }
+
 #link {
     color: white;
 }
+
 #link:hover {
     color: rgba(0, 138, 171, 1.0);
 }
-#link_admin{
+
+#link_admin {
     color: black;
 }
+
 .dropdown-menu a {
     text-decoration: none;
 }
-.table-striped > tbody > tr:nth-of-type(2n+1) > * {
-   /*background-color: rgba(0, 138, 171, 0.4) !important;*/
+
+.table-striped>tbody>tr:nth-of-type(2n+1)>* {
+    /*background-color: rgba(0, 138, 171, 0.4) !important;*/
     background-color: rgb(60, 180, 229, 0.5);
 }
-.accordion-button:not(.collapsed){
+
+.accordion-button:not(.collapsed) {
     background-color: rgb(60, 180, 229, 0.6) !important;
 }
+
 .dropdown-menu a:hover {
     background-color: rgb(60, 180, 229, 0.6);
-    color:white
+    color: white
 }
+
 .nav-item:hover .nav-link {
     background-color: #e0f7fa;
-    color:rgb(60, 180, 229, 0.6);
+    color: rgb(60, 180, 229, 0.6);
 }
+
 .nav-link.active {
     background-color: #e0f7fa;
     color: rgb(60, 180, 229, 0.6);
 }
+
 .bi {
-    font-size: 18px; /* Tamaño de los iconos de bootstrap */
-  }
-.linkAdmin{
+    font-size: 18px;
+    /* Tamaño de los iconos de bootstrap */
+}
+
+.linkAdmin {
     color: rgb(60, 180, 229, 1.0);
 }
+
 .linkAdmin:hover {
     color: #211261;
+    transition: color 0.3s ease;
 }
-.adminText{
+
+.adminText {
     color: #211261;
 }
-.page-link.active, .active > .page-link
-{
+
+.page-link.active,
+.active>.page-link {
     background-color: rgba(60, 180, 229, 1.0) !important;
 }
-.page-link
-{
-    color:#211261 !important;
+
+.page-link {
+    color: #211261 !important;
 }
+
 .full-height {
     min-height: 93.5vh;
     display: flex;
