--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -121,3 +121,8 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.modal .modal-header {
+    background-color: rgb(60, 180, 229, 1.0);
+    color: white
+}
